=============================================================================
 This file describes changes in the cvec package beginning from version 1.2:
=============================================================================

==========================
 Changes from 1.2 -> 1.3:
==========================

  - change nearly everything to the new vector/matrix interface
  - implement new Intersection functionality no longer using Zassenhaus
  - allow for more than one package with a C-part
  - added test/polynomials.g to check characteristic and minimal polynomials
  - added Memory for cvecs and cmats and to interface