@@ -290,6 +290,10 @@ DeclareOperation( "Vector", [IsList,IsRowVectorObj]);
 # Creates a new vector in the same representation but with entries from list.
 # The length is given by the length of the first argument.
 
+DeclareOperation( "ChangeBaseDomain", [IsRowVectorObj,IsRing] );
+# Changes the base domain. A copy of the row vector in the first argument is
+# created, which comes in a "similar" representation but over the new
+# base domain that is given in the second argument.
 
 ############################################################################
 # Some things that fit nowhere else:
@@ -518,6 +522,11 @@ InstallMethod( Matrix, "generic convenience method with 2 args",
 # Note that it is not possible to generate a matrix via "Matrix" without
 # a template matrix object. Use the representation-specific constructor
 # methods instead.
+
+DeclareOperation( "ChangeBaseDomain", [IsMatrixObj,IsRing] );
+# Changes the base domain. A copy of the matrix in the first argument is
+# created, which comes in a "similar" representation but over the new
+# base domain that is given in the second argument.
 
 
 ############################################################################
