@@ -3,6 +3,14 @@
 =============================================================================
 
 ==========================
+ Changes from 1.3 -> 1.4:
+==========================
+
+  - Adjust to new buffered I/O.
+  - New operation ChangeBaseDomain with methods for cvecs and cmats.
+
+
+==========================
  Changes from 1.2 -> 1.3:
 ==========================
 
